--- a/content/pages/inicio.html
+++ b/content/pages/inicio.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>Inicio</title>
-        <meta name="order" content="1" />
+        <meta name="save_as" content="index.html" />
+        <meta name="status" content="hidden" />
     </head>
     <body>
         <div class="container-fluid">
