--- a/content/pages/recorrido.html
+++ b/content/pages/recorrido.html
@@ -4,6 +4,36 @@
         <meta name="order" content="5" />
     </head>
     <body>
-        Fill me
+        <div class="content">
+            <div class="row">
+                <div class="col-md-4 well">
+                    <p class="bg-danger">ATENCIÓN Corredores de la distancia de 10Km: El recorrido de ida de la carrera de los 10 km tiene 3 variantes:
+                        <ol>
+                            <li>A la llegada al cruce entre la calle viera y la calle Cólogan se entrará en la calle Sabino Berthelot y se continuará hasta el final de la Avenida Iberoamericana hasta el final donde se dará la vuelta para remontar el mismo recorrido hasta la bajada de la marquesa, uniéndose con el recorrido habitual de la carrera.</li>
+                            <li> Una pequeña variante después del Barranco de Tafuriaste entrando a la derecha (como aparece en el gráfico entre los números 5 y 6). </li>
+                            <li> La vuelta se dará en el barranco de la Luz antes de llegar a la carretera general de la Zamora-La Montaña, justo donde se da la salida de la carrera de 5 Km.</li>
+                        </ol>
+                    </p>
+                </div>
+                <div class="col-md-8">
+                    <p>Aquí te presentamos un plano conceptual del recorrido del cross, que se extiende desde el Colegio Salesiano hasta EL BARRANCO DE LA LUZ, antes de entrar en el municipio de Los Realejos.</p>
+                    <img class="img-responsive" src="{filename}/images/mapa_conceptual.png" />
+                    <h3>Descripción del recorrido</h3>
+                    <ol>
+                        <li>Salida de 10Km. y meta de todas las carreras: Puerta del Colegio Salesianos.</li>
+                        <li>Salida de los 400m. al principio del a calle Nicandro González Borges (Desplazamiento caminando)</li>
+                        <li>Salida de los 500m. en la esquina de la Calle Viera - Tomás Zerolo (Desplazamiento caminando)</li>
+                        <li>Salida de 1Km. en La Playita (Desplazamiento Caminando)</li>
+                        <li>Salida de los 2Km. en el Barranco Tafuriaste (Desplazamiento caminando)</li>
+                        <li>Salida de los 3Km. en la Iglesia de La Luz (Desplazamiento en guagua de la organización)</li>
+                        <li>Salida de los 5Km. en el Barranco de La Luz (Desplazamiento en guagua de la organización)</li>
+                    </ol>
+                    <h3>Consulte el mapa</h3>
+                    <div class="embed-responsive embed-responsive-4by3">
+                        <iframe class="embed-responsive-item" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.es/?ie=UTF8&amp;source=embed&amp;t=m&amp;ll=28.392269,-16.524382&amp;spn=0.006607,0.011802&amp;z=16&amp;output=embed"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
