--- a/content/pages/resultados.html
+++ b/content/pages/resultados.html
@@ -4,6 +4,7 @@
         <meta name="order" content="6" />
     </head>
     <body>
-        Fill me
+        <h2>Resultados y orden de llegada de la presente edición.</h2>
+        <p>Para consultar mas detalles sobre la carrera y recorrido, dirigirse a la Web</p>
     </body>
 </html>
