--- a/content/pages/chips.html
+++ b/content/pages/chips.html
@@ -2,6 +2,7 @@
     <head>
         <title>Chips</title>
         <meta name="order" content="8" />
+        <meta name="status" content="hidden" />
     </head>
     <body>
         Fill me
