--- a/content/pages/resultados.html
+++ b/content/pages/resultados.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>Resultados</title>
-        <meta name="order" content="6" />
+        <meta name="order" content="7" />
+        <meta name="status" content="hidden" />
     </head>
     <body>
         <h2>Resultados y orden de llegada de la presente edición.</h2>
