--- a/content/pages/reglamento.html
+++ b/content/pages/reglamento.html
@@ -4,6 +4,14 @@
         <meta name="order" content="4" />
     </head>
     <body>
+        <h3>
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="{filename}reglamento.html" role="tab">Reglamento</a></li>
+                <li role="presentation"><a href="{filename}recomendaciones.html" role="tab">Recomendaciones</a></li>
+                <li role="presentation"><a href="{filename}premios.html" role="tab">Premios</a></li>
+            </ul>
+        </h3>
+    
         <p class="alert alert-success">ATENCIÓN: La Organización le recomienda que lea atentamente el reglamento y las recomendaciones, para contribuir así con el correcto desarrollo del evento.</p>
         <ol>
             <li>La presente carrera popular "CROSS MARÍA AUXILIADORA VILLA DE LA OROTAVA" está organizada por el <b>Colegio Salesiano San Isidro Labrador</b>.</li> 
