--- a/content/pages/patrocinadores.html
+++ b/content/pages/patrocinadores.html
@@ -6,7 +6,7 @@
     <body>
         <div class="content">
             <div class="row">
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/laorotava.jpg" />
                         <div class="caption">
@@ -14,7 +14,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/cabildo.jpg" />
                         <div class="caption">
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/vida.jpg" />
                         <div class="caption">
@@ -30,7 +30,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+            </div>
+            <div class="row">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/rosalesa.gif" />
                         <div class="caption">
@@ -38,7 +40,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/cocacola.jpg" />
                         <div class="caption">
@@ -46,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/muevete.gif" />
                         <div class="caption">
@@ -54,7 +56,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+            </div>
+            <div class="row">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/fuentealta.png" />
                         <div class="caption">
@@ -62,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/intersport.jpg" />
                         <div class="caption">
@@ -70,7 +74,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/muevetetenerife.gif" />
                         <div class="caption">
@@ -78,7 +82,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+            </div>
+            <div class="row">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/canarea.jpg" />
                         <div class="caption">
@@ -86,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/todomovil.gif" />
                         <div class="caption">
@@ -94,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/cyt.gif" />
                         <div class="caption">
@@ -102,7 +108,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+            </div>
+            <div class="row">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/artezul.jpg" />
                         <div class="caption">
@@ -110,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/blumar.gif" />
                         <div class="caption">
@@ -118,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-md-4">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/taoro.jpg" />
                         <div class="caption">
@@ -130,7 +138,7 @@
 
             <h2>Resto de Colaboradores</h2>
             <div class="row">
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/elviajante.jpg" />
                         <div class="caption">
@@ -138,7 +146,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/radioreyes.png" />
                         <div class="caption">
@@ -146,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/nivaria.gif" />
                         <div class="caption">
@@ -154,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/gcivil.png" />
                         <div class="caption">
@@ -162,7 +170,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+            </div>
+            <div class="row">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/pl_orotava.png" />
                         <div class="caption">
@@ -170,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/risi.png" />
                         <div class="caption">
@@ -178,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/cepsa.png" />
                         <div class="caption">
@@ -186,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/golosinas_victor.gif" />
                         <div class="caption">
@@ -194,7 +204,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+            </div>
+            <div class="row">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/cruzdelteide.gif" />
                         <div class="caption">
@@ -202,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/hara.jpg" />
                         <div class="caption">
@@ -210,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/nks.jpg" />
                         <div class="caption">
@@ -218,7 +230,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/mundisport.gif" />
                         <div class="caption">
@@ -226,7 +238,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+            </div>
+            <div class="row">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/la_buhardilla.jpg" />
                         <div class="caption">
@@ -234,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/maderassantana.jpg" />
                         <div class="caption">
@@ -242,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/mutuatinerfena.jpg" />
                         <div class="caption">
@@ -250,7 +264,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-3">
+                <div class="col-md-3">
                     <div class="thumbnail">
                         <img src="{filename}/images/patrocinadores/multiopticas.jpg" />
                         <div class="caption">
@@ -260,77 +274,87 @@
                 </div>
             </div>
 
-            <h2>Relación nominal de todos los patrocinadores y colaboradores.</h2>
-            <ul>
-                <li>AA.AA. Salesianos</li>
-                <li>Almacenes la Venta Nueva</li>
-                <li>Antonio Suárez Baute e Hijos S.L.</li>
-                <li>A.P.A. Colegio Salesiano</li>
-                <li>Artedrago</li>
-                <li>Asociación de María Auxiliadora (ADMA)</li>
-                <li>Ayuntamiento de La Orotava</li>
-                <li>Bar Fariña (Comercial, Calzados y Lencería)</li>
-                <li>Beauty Car.</li>
-                <li>Blumar S.L.</li>
-                <li>Cabildo Insular de Tenerife</li>
-                <li>Carmen Corte y Confección.</li>
-                <li>Carpintería La Luz - Eulogio Martín</li>
-                <li>C.B. San Isidro</li>
-                <li>Cepsa Orotava</li>
-                <li>C.J. Don Bosco</li>
-                <li>Clínica Veterinaria Los Cuartos</li>
-                <li>Clínica Veterinaria Orotava</li>
-                <li>Club Deportivo Salesianos CDS.</li>
-                <li>Conpla servicios</li>
-                <li>Construcciones Jumisa</li>
-                <li>Cooperadores Salesianos (CC.SS.)</li>
-                <li>Cristalería Mencey</li>
-                <li>Deportes Ernesto, Los Silos</li>
-                <li>Deportes Guzmán, La Laguna</li>
-                <li>El viajante, Librería y Vinatería</li>
-                <li>Enmarcaciones ”El Cuadro”</li>
-                <li>Estanco Orotava</li>
-                <li>Eurocos Alter Ego</li>
-                <li>Farmacia Laura Pérez Zárate</li>
-                <li>Foto Cine Valher</li>
-                <li>Fotografías C.M.S.</li>
-                <li>FuenteAlta</li>
-                <li>Fundación Proyecto Don Bosco.</li>
-                <li>Gab. Tec. Juri Juan Jesús Martín</li>
-                <li>Gimnasio Puerto Palace</li>
-                <li>Gobierno de Canarias</li>
-                <li>Gráficas Echeyde</li>
-                <li>Grupo Vida</li>
-                <li>Intersport</li>
-                <li>Kiosko Cafetería El Manjar</li>
-                <li>La Buhardilla Muebles</li>
-                <li>La Cueva Gráfica</li>
-                <li>Librería Papelería Stabilo</li>
-                <li>Malidente</li>
-                <li>Mapfre Seguros</li>
-                <li>Merca Fruve, S.L.</li>
-                <li>Movimiento Juvenil Salesianos (MJS)</li>
-                <li>Muevete Ocio Educativo.</li>
-                <li>Mundi Sport, Puerto de la Cruz</li>
-                <li>Ortopedia Ji-Ro</li>
-                <li>Profesorado del Colegio Salesiano</li>
-                <li>Promociones Oscar García</li>
-                <li>Pueblo Chico</li>
-                <li>Radio Reyes</li>
-                <li>Repuestos Orotava s.l.</li>
-                <li>Restaurante La Candelaria</li>
-                <li>Risi</li>
-                <li>Rodapalla Decora</li>
-                <li>Royal British School</li>
-                <li>Sagrera Canarias</li>
-                <li>SAPRA “moda, complementos y bisutería”</li>
-                <li>Servicio Tec. Direc. J. Jesús y J. Vicente</li>
-                <li>Suministros Agrícolas de Tenerife S.L.</li>
-                <li>Terraza TAoro</li>
-                <li>Tintoreria Stiro</li>
-                <li>Todo móvil y +</li>
-                <li>Tuta Sport</li>
-            </ul>
+            <div class="row">
+                <h2>Relación nominal de todos los patrocinadores y colaboradores.</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <ul>
+                        <li>AA.AA. Salesianos</li>
+                        <li>Almacenes la Venta Nueva</li>
+                        <li>Antonio Suárez Baute e Hijos S.L.</li>
+                        <li>A.P.A. Colegio Salesiano</li>
+                        <li>Artedrago</li>
+                        <li>Asociación de María Auxiliadora (ADMA)</li>
+                        <li>Ayuntamiento de La Orotava</li>
+                        <li>Bar Fariña (Comercial, Calzados y Lencería)</li>
+                        <li>Beauty Car.</li>
+                        <li>Blumar S.L.</li>
+                        <li>Cabildo Insular de Tenerife</li>
+                        <li>Carmen Corte y Confección.</li>
+                        <li>Carpintería La Luz - Eulogio Martín</li>
+                        <li>C.B. San Isidro</li>
+                        <li>Cepsa Orotava</li>
+                        <li>C.J. Don Bosco</li>
+                        <li>Clínica Veterinaria Los Cuartos</li>
+                        <li>Clínica Veterinaria Orotava</li>
+                        <li>Club Deportivo Salesianos CDS.</li>
+                        <li>Conpla servicios</li>
+                        <li>Construcciones Jumisa</li>
+                        <li>Cooperadores Salesianos (CC.SS.)</li>
+                        <li>Cristalería Mencey</li>
+                        <li>Deportes Ernesto, Los Silos</li>
+                        <li>Deportes Guzmán, La Laguna</li>
+                        <li>El viajante, Librería y Vinatería</li>
+                        <li>Enmarcaciones ”El Cuadro”</li>
+                        <li>Estanco Orotava</li>
+                        <li>Eurocos Alter Ego</li>
+                        <li>Farmacia Laura Pérez Zárate</li>
+                        <li>Foto Cine Valher</li>
+                        <li>Fotografías C.M.S.</li>
+                        <li>FuenteAlta</li>
+                        <li>Fundación Proyecto Don Bosco.</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <ul>
+                        <li>Gab. Tec. Juri Juan Jesús Martín</li>
+                        <li>Gimnasio Puerto Palace</li>
+                        <li>Gobierno de Canarias</li>
+                        <li>Gráficas Echeyde</li>
+                        <li>Grupo Vida</li>
+                        <li>Intersport</li>
+                        <li>Kiosko Cafetería El Manjar</li>
+                        <li>La Buhardilla Muebles</li>
+                        <li>La Cueva Gráfica</li>
+                        <li>Librería Papelería Stabilo</li>
+                        <li>Malidente</li>
+                        <li>Mapfre Seguros</li>
+                        <li>Merca Fruve, S.L.</li>
+                        <li>Movimiento Juvenil Salesianos (MJS)</li>
+                        <li>Muevete Ocio Educativo.</li>
+                        <li>Mundi Sport, Puerto de la Cruz</li>
+                        <li>Ortopedia Ji-Ro</li>
+                        <li>Profesorado del Colegio Salesiano</li>
+                        <li>Promociones Oscar García</li>
+                        <li>Pueblo Chico</li>
+                        <li>Radio Reyes</li>
+                        <li>Repuestos Orotava s.l.</li>
+                        <li>Restaurante La Candelaria</li>
+                        <li>Risi</li>
+                        <li>Rodapalla Decora</li>
+                        <li>Royal British School</li>
+                        <li>Sagrera Canarias</li>
+                        <li>SAPRA “moda, complementos y bisutería”</li>
+                        <li>Servicio Tec. Direc. J. Jesús y J. Vicente</li>
+                        <li>Suministros Agrícolas de Tenerife S.L.</li>
+                        <li>Terraza TAoro</li>
+                        <li>Tintoreria Stiro</li>
+                        <li>Todo móvil y +</li>
+                        <li>Tuta Sport</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
