--- a/content/pages/categorias.html
+++ b/content/pages/categorias.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         
-        <p>Las categorías aquí elacionadas corresponden al <span class="badge badge-primary">año 2015</span>.</p>
+        <p>Las categorías aquí elacionadas corresponden al <span class="badge badge-primary">año 2016</span>.</p>
+        <div class="alert alert-success text-center">Todas las categorías no son por edad el día de la prueba, sino por los años de nacimiento.</div>
         <div class="alert alert-warning text-center"><i class="glyphicon glyphicon-exclamation-sign"></i> Es sumamente importante que consultes tu categoría antes de inscribirte.</div>
         
         <p>Obtendrán trofeo los 3 primeros clasificados en cada uno de las categorías. Diploma y camiseta para todos los participantes. </p>
@@ -17,26 +18,26 @@
                 <tr><th>Categoria</th><th>Año</th><th>Distancia</th></tr>
             </thead>
             <tbody>
-                <tr><td>Párvulos (A)</td><td> 11 y posterior</td><td>400 m.</td></tr> 
-                <tr><td>Pärvulos (B)</td><td>09-10</td><td>500 m.</td></tr> 
-                <tr><td>Pre-Benjamín</td><td>07-08</td><td>800 m.</td></tr> 
-                <tr><td>Benjamín</td><td>05-06</td><td>1 Km.</td></tr> 
-                <tr><td>Alevín</td><td>03-04</td><td>2 Km.</td></tr> 
-                <tr><td>Infantil</td><td> 01-02</td><td>3 Km.</td></tr> 
-                <tr><td>Cadete</td><td>99-00</td><td>5 Km.</td></tr> 
-                <tr><td>Junior-Juvenil</td><td>97-98</td><td>5 Km.</td></tr> 
-                <tr><td>Promesas</td><td>95-96</td><td>10 Km.</td></tr> 
-                <tr><td>Senior A</td><td>88-94</td><td>10 Km.</td></tr> 
-                <tr><td>Senior B</td><td> 81-87</td><td>10 Km.</td> </tr> 
-                <tr><td>Veteranos A</td><td>76-80</td><td>10 Km.</td> </tr> 
-                <tr><td>Veteranos B</td><td> 71-75</td><td>10 Km.</td> </tr> 
-                <tr><td>Veteranos C</td><td> 66-70</td><td>10 Km.</td> </tr> 
-                <tr><td>Veteranos D</td><td> 61-65</td><td>10 Km.</td> </tr> 
-                <tr><td>Veteranos E</td><td>56-60</td><td>10 Km.</td> </tr> 
-                <tr><td>Veteranos F</td><td> 51-55</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos G</td><td>46-50</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos H</td><td> 41-45</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos I</td><td>40 y anterior</td><td>5 Km.</td></tr> 
+                <tr><td>Párvulos (A)</td><td> 12 y posterior</td><td>400 m.</td></tr> 
+                <tr><td>Pärvulos (B)</td><td>10-11</td><td>500 m.</td></tr> 
+                <tr><td>Pre-Benjamín</td><td>08-09</td><td>800 m.</td></tr> 
+                <tr><td>Benjamín</td><td>06-07</td><td>1 Km.</td></tr> 
+                <tr><td>Alevín</td><td>04-05</td><td>2 Km.</td></tr> 
+                <tr><td>Infantil</td><td> 02-03</td><td>3 Km.</td></tr> 
+                <tr><td>Cadete</td><td>00-01</td><td>5 Km.</td></tr> 
+                <tr><td>Junior-Juvenil</td><td>98-99</td><td>5 Km.</td></tr> 
+                <tr><td>Promesas</td><td>96-97</td><td>10 Km.</td></tr> 
+                <tr><td>Senior A</td><td>89-95</td><td>10 Km.</td></tr> 
+                <tr><td>Senior B</td><td> 82-88</td><td>10 Km.</td> </tr> 
+                <tr><td>Veteranos A</td><td>77-81</td><td>10 Km.</td> </tr> 
+                <tr><td>Veteranos B</td><td> 72-76</td><td>10 Km.</td> </tr> 
+                <tr><td>Veteranos C</td><td> 67-71</td><td>10 Km.</td> </tr> 
+                <tr><td>Veteranos D</td><td> 62-66</td><td>10 Km.</td> </tr> 
+                <tr><td>Veteranos E</td><td>57-61</td><td>10 Km.</td> </tr> 
+                <tr><td>Veteranos F</td><td> 52-56</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranos G</td><td>47-51</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranos H</td><td> 42-46</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranos I</td><td>41 y anterior</td><td>5 Km.</td></tr> 
             </tbody>
         </table>
         <h2><i class="fa fa-female"></i> Categorias Femeninas</h2>
@@ -45,23 +46,33 @@
                 <tr><th>Categoria</th><th>Año</th><th>Distancia</th></tr>
             </thead>
             <tbody>
-                <tr><td>Párvulos (A)</td><td> 11 y posterior</td><td>400 m.</td></tr> 
-                <tr><td>Pärvulos (B)</td><td>09-10</td><td>500 m.</td></tr> 
-                <tr><td>Pre-Benjamín</td><td>07-08</td><td>800 m.</td></tr> 
-                <tr><td>Benjamín</td><td>05-06</td><td>1 Km.</td></tr> 
-                <tr><td>Alevín</td><td>03-04</td><td>2 Km.</td></tr> 
-                <tr><td>Infantil</td><td> 01-02</td><td>3 Km.</td></tr> 
-                <tr><td>Cadete</td><td>99-00</td><td>5 Km.</td></tr> 
-                <tr><td>Junior-Juvenil</td><td>97-98</td><td>5 Km.</td></tr> 
-                <tr><td>Promesas</td><td>95-96</td><td>5 Km.</td></tr> 
-                <tr><td>Senior A</td><td>88-94</td><td>5 Km.</td></tr> 
-                <tr><td>Senior B</td><td> 81-87</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos A</td><td>76-80</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos B</td><td> 71-75</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos C</td><td> 66-70</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos D</td><td> 61-65</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos E</td><td>56-60</td><td>5 Km.</td></tr> 
-                <tr><td>Veteranos F</td><td>55 y anteriores</td><td>5 Km.</td></tr>
+                <tr><td>Párvulos (A)</td><td> 12 y posterior</td><td>400 m.</td></tr> 
+                <tr><td>Pärvulos (B)</td><td>10-11</td><td>500 m.</td></tr> 
+                <tr><td>Pre-Benjamín</td><td>08-09</td><td>800 m.</td></tr> 
+                <tr><td>Benjamín</td><td>06-07</td><td>1 Km.</td></tr> 
+                <tr><td>Alevín</td><td>04-05</td><td>2 Km.</td></tr> 
+                <tr><td>Infantil</td><td> 02-03</td><td>3 Km.</td></tr> 
+                <tr><td>Cadete</td><td>00-01</td><td>5 Km.</td></tr> 
+                <tr><td>Junior-Juvenil</td><td>98-99</td><td>5 Km.</td></tr> 
+                <tr><td>Promesas</td><td>96-97</td><td>5 Km.</td></tr> 
+                <tr><td>Senior A</td><td>89-95</td><td>5 Km.</td></tr> 
+                <tr><td>Senior B</td><td> 82-88</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranas A</td><td>77-81</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranas B</td><td> 72-76</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranas C</td><td> 67-71</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranas D</td><td> 62-66</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranas E</td><td>57-61</td><td>5 Km.</td></tr> 
+                <tr><td>Veteranas F</td><td>56 y anteriores</td><td>5 Km.</td></tr>
+            </tbody>
+        </table>
+        <h3><i class="fa fa-female"></i> Femeninas Absolutas</h3>
+        <p>Las corredoras que se inscriban en la carrera de 10km participarán en una sola categoría absoluta, y serán las que aspiren por el premio en metálico del Cross María Auxiliadora.</p>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr><th>Categoria</th><th>Año</th><th>Distancia</th></tr>
+            </thead>
+            <tbody>
+                <tr><td>Absoluta</td><td>97-57</td><td>10 Km.</td></tr> 
             </tbody>
         </table>
     </body>
