--- a/content/pages/reglamento.html
+++ b/content/pages/reglamento.html
@@ -29,6 +29,8 @@
             <li>Existirá un <b>servicio de aparcamiento</b> en las canchas deportivas situadas junto a la piscina del colegio, siendo su entrada por la carretera general de la Plaza de La Paz al Ramal. </li> 
             <li>Todo participante, por el mero hecho de cursar inscripción, acepta el presente Reglamento. Todo aquello no previsto en el mismo, estará sujeto a al dictamen de la organización y de los jueces. </li> 
             <li>La competición está sujeta a las normas que la organización establece, y para lo no contemplado en las mismas quedan sujeta a las establecidas por la Real Federación Española de Atletismo. </li>
+            <li>La Carrera Absoluta Femenina no tendrá restriccion alguna de edad. Asi mismo, cualquier fémina que desee participar en la distancia de 10km podrá hacerlo sin problema.</li>
+            <li>El dorsal de la prueba tendrá incluido el chip de localización, por lo que se ruega el buen uso y el cuidado del mismo.</li>
         </ol>
     </body>
 </html>
