--- a/content/pages/inicio.html
+++ b/content/pages/inicio.html
@@ -7,12 +7,15 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4 well text-center">
-                    <h3><i class="fa fa-calendar"></i>39ª Edición</h3>
-                    <h4> 
-                        15 de mayo de 2016<br/>
-                        A las 08:00 horas
-                    </h4>
+                <div class="col-sm-4 text-center">
+                    <div class="well">
+                        <h3><i class="fa fa-calendar"></i>39ª Edición</h3>
+                        <h4> 
+                            15 de mayo de 2016<br/>
+                            A las 08:00 horas
+                        </h4>
+                    </div>
+                    <a class="btn btn-warning btn-lg" href="https://auxiliadoracross.trackingsport.com/publicweb/events/modalidades.xhtml?o=WEBMAXU">Novedad <i class="fa fa-pencil-square-o"></i> Inscripción online!</a>
                 </div>
                 <div class="col-sm-4">
                     <h3><i class="fa fa-clock-o"></i> <a href="{filename}historia.html">Historia</a></h3>
