override nombres html para que concidan con web anterior

--- a/content/pages/categorias.html
+++ b/content/pages/categorias.html
@@ -2,6 +2,7 @@
     <head>
         <title>Categorías</title>
         <meta name="order" content="3" />
+        <meta name="save_as" content="categorias.html" />
     </head>
     <body>
         
