--- a/content/pages/patrocinadores.html
+++ b/content/pages/patrocinadores.html
@@ -2,6 +2,7 @@
     <head>
         <title>Patrocinadores</title>
         <meta name="order" content="6" />
+        <meta name="save_as" content="patrocinadores.html" />
     </head>
     <body>
         <div class="content">
