--- a/content/pages/resultados.html
+++ b/content/pages/resultados.html
@@ -3,6 +3,7 @@
         <title>Resultados</title>
         <meta name="order" content="7" />
         <meta name="status" content="hidden" />
+        <meta name="save_as" content="resultados.html" />
     </head>
     <body>
         <h2>Resultados y orden de llegada de la presente edición.</h2>
