--- a/content/pages/recomendaciones.html
+++ b/content/pages/recomendaciones.html
@@ -2,6 +2,7 @@
     <head>
         <title>Recomendaciones</title>
         <meta name="status" content="hidden" />
+        <meta name="save_as" content="rmarco_recomendaciones.html" />
     </head>
     <body>
         <h3>
