--- a/content/pages/recorrido.html
+++ b/content/pages/recorrido.html
@@ -2,6 +2,7 @@
     <head>
         <title>Recorrido</title>
         <meta name="order" content="5" />
+        <meta name="save_as" content="recorrido.html" />
     </head>
     <body>
         <div class="content">
