comentando overrides que parece que no funcionan

--- a/content/pages/historia.html
+++ b/content/pages/historia.html
@@ -2,7 +2,7 @@
     <head>
         <title>Historia</title>
         <meta name="order" content="2" />
-        <meta name="save_as" content="historia.html" />
+        <!--=<meta name="save_as" content="historia.html" />-->
     </head>
     <body>
         <p>Todos los videos puedes encontrarlos además en <a href="http://www.youtube.com/"><i class="fa fa-youtube"></i> YouTube</a>.</p>
