--- a/content/pages/chips.html
+++ b/content/pages/chips.html
@@ -3,7 +3,7 @@
         <title>Chips</title>
         <meta name="order" content="8" />
         <meta name="status" content="hidden" />
-        <meta name="save_as" content="chips_informaticos.html" />
+        <!--<meta name="save_as" content="chips_informaticos.html" />-->
     </head>
     <body>
         Fill me
