--- a/content/pages/premios.html
+++ b/content/pages/premios.html
@@ -2,7 +2,7 @@
     <head>
         <title>Premios</title>
         <meta name="status" content="hidden" />
-        <meta name="save_as" content="marco_premios.html" />
+        <!--<meta name="save_as" content="marco_premios.html" />-->
     </head>
     <body>
         <h3>
