--- a/content/pages/reglamento.html
+++ b/content/pages/reglamento.html
@@ -2,7 +2,7 @@
     <head>
         <title>Reglamento</title>
         <meta name="order" content="4" />
-        <meta name="save_as" content="reglamento.html" />
+        <!--<meta name="save_as" content="reglamento.html" />-->
     </head>
     <body>
         <h3>
